readme update
Co-authored-by: Cursor <cursoragent@cursor.com>